# telegram-bot-nbmjapan

./: .replit  README.md  google_sheets.py  keepalive.py  main.py  pyproject.toml  test_sheets.py
attached_assets/: Pasted--Telegram-Python-Replit-1--1750068358795_1750068358801.txt
