[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "pytelegrambotapi>=4.27.0",
    "requests>=2.32.4",
    "google-api-python-client>=2.110.0",
    "google-auth>=2.25.2",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
]
